# NarcissisticNumbers

./: .gitignore  .gitmodules  CMakeLists.txt  NarcissisticNumCalculator.cpp  NarcissisticNumCalculator.h  NarcissisticNumbers.cpp  NarcissisticNumbers.h  NarcissisticNumbers.sln  NarcissisticNumbers.ui  NarcissisticNumbers.vcxproj  SpinBox64.cpp  SpinBox64.h  SpinBox64U.cpp  SpinBox64U.h  include.cmake  main.cpp  utils.cpp  utils.h
Modules/: FindDeploy.cmake
